# hompack

./: .gitattributes  .gitignore  AGENTS.md  README.md  api-doc-ford.md  codecov.yml  flang_config.ini  fpm.toml  meson.build  meson.options
.github/workflows/: pages.yml  test_flang.yml  test_gcc.yml
c/: README.md
src/: HOMPACK90.f  blas_interfaces.f90  hompack.f  hompack_core.f  hompack_core.f90  hompack_core_legacy.f  hompack_df.f  hompack_ds.f  hompack_global.f90  hompack_global_legacy.f90  hompack_interfaces.f90  hompack_kinds.f90  hompack_nf.f90  hompack_ns.f  hompack_poly.f_  hompack_qf.f  hompack_qs.f  lapack_interfaces.f90
test/: TESTF.f  TESTP.f  TESTS.f  TEST_F.f  TEST_P.f  TEST_S.f  meson.build  test_f.f90  test_p.f90  test_p.f90_  test_s.f90  test_s.f90_
