option('blas_option', type: 'combo', choices: ['auto', 'openblas', 'refblas'], value: 'auto',
       description: 'BLAS library to use (auto, openblas, or refblas)')
option('build_examples', type : 'boolean', value : false,
       description : 'Build example programs')
option('build_tests', type: 'boolean', value: false,
       description: 'Build tests')
option('build_shared', type: 'boolean', value: false,
       description: 'Build shared library')